# research_paper_finder

./: LICENSE  README.md
api/: README.md  justfile  pyproject.toml
api/api/: app.py  config.py  deps.py  routes.py  types.py
api/api/llm/: openai_client.py  prompt_builder.py  streams.py  yaml_parser.py
api/api/research/: paper_summary_generator.py  paper_text_extractor.py  researcher.py  search_term_generator.py  web_searcher.py
api/poc/: google_search.ipynb
ui/: README.md  package-lock.json  package.json
ui/src/: App.tsx  main.tsx
ui/src/components/: research-message.tsx  user-message.tsx
